fix: change animal info button align

--- a/online-zoo/pages/zoos/alligator/style.css
+++ b/online-zoo/pages/zoos/alligator/style.css
@@ -569,14 +569,17 @@ html {
   display: grid;
   grid-template-columns: 1fr 2fr;
   column-gap: 70px;
-  padding-bottom: 14px;
+  padding-bottom: 58px;
   border-bottom: 1px solid #767474;
-  ;
 }
-
+.animal-info__content {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+}
 .animal-info__img {
   width: 422px;
-  height: 421px;
+  height: 377.6px;
 }
 
 .animal-info__text {
@@ -588,7 +591,9 @@ html {
   color: #ABABAB;
   margin: 0 0 40px;
 }
-
+.animal-info__button {
+  margin-bottom: 0px;
+}
 .animal-info__read-less_button {
   width: 129px;
   height: 42px;
